@@ -402,4 +402,9 @@ ssh_pwauth: True
 #  this option to 'True', and maintain (remove) that link before the image
 #  will be booted as a new instance.
 # default is False
-manual_cache_clean = False
+manual_cache_clean: False
+
+# if you wish to have /etc/hosts written from /etc/cloud/templates/hosts.tmpl
+# on a per-always basis (to account for ebs stop/start), then set
+# manage_etc_hosts to True. The default is 'False'
+manage_etc_hosts: False
