@@ -1,5 +1,20 @@
-127.0.0.1 localhost
+## This file (/etc/cloud/templates/hosts.tmpl) is only utilized
+## if enabled in cloud-config.  Specifically, in order to enable it
+## you need to add the following to config:
+##    manage_etc_hosts: True
+##
+## Note, double-hash commented lines will not appear in /etc/hosts
+# 
+# Your system has configured 'manage_etc_hosts' as True.
+# As a result, if you wish for changes to this file to persist
+# then you will need to either
+# a.) make changes to the master file in /etc/cloud/templates/hosts.tmpl
+# b.) change or remove the value of 'manage_etc_hosts' in
+#     /etc/cloud/cloud.cfg or cloud-config from user-data
+# 
+## The value '$hostname' will be replaced with the local-hostname
 127.0.1.1 $hostname
+127.0.0.1 localhost
 
 # The following lines are desirable for IPv6 capable hosts
 ::1 ip6-localhost ip6-loopback
